# matplotlib-sankey

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt  testing.ipynb  testing_sankey_networkx.ipynb
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yml  release.yml  testing.yml
dev/: old_sankey.ipynb  testing.ipynb
docs/: Makefile  example_simple.ipynb  generate_example.py
docs/source/: conf.py  example.md  index.rst  install.rst  vignette.ipynb
docs/source/_build/coverage/: python.txt  undoc.pickle
docs/source/_build/doctest/: output.txt
docs/source/_build/doctrees/: environment.pickle  example.doctree  index.doctree  install.doctree  vignette.doctree
docs/source/_build/doctrees/autoapi/matplotlib_sankey/: index.doctree
docs/source/_build/doctrees/nbsphinx/: vignette.ipynb
docs/source/_build/html/: .buildinfo  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  vignette.html
docs/source/_build/html/_sources/: index.rst
docs/source/_build/html/_sources/autoapi/matplotlib_sankey/: index.rst
docs/source/_build/html/autoapi/matplotlib_sankey/: index.html
docs/source/_static/css/: custom.css
matplotlib_sankey/: __init__.py  _colors.py  _patches.py  _plotting.py  _types.py  _utils.py
src/matplotlib_sankey/: __init__.py  _colors.py  _plotting.py  _types.py  _utils.py  _version.py
tests/: test_colors.py  test_package.py  test_sankey_plot.py  test_utils.py
